Added headshot and name

--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>My link in bio</head>
-  <body></body>
+  <head>
+    My link in bio
+  </head>
+
+  <body>
+    <div class="banner">
+      <img src="/Photos/Booth Headshot.jpg" alt="Tina Cho headshot">
+    </div>
+    
+    <div class="name">
+      Tina Cho
+    </div>
+
+    <div class=""
+    
+  </body>
 </html>
