Added social media, jack gilbert

--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
       Tina Cho
     </div>
 
-    <div class=""
+    <div class="social icons">
+      <a href="https://www.linkedin.com/in/haeyeontinacho/" target="_blank">
+        LinkedIn
+      </a>
+      <a href="https://www.instagram.com/tnacho93/" target="_blank">
+        Instagram
+      </a>
+    </div>
+
+    <div class="link">
+      <img src="/Photos/Jack Gilbert.jpeg">
+      <a href="https://www.poetryfoundation.org/poems/43407/michiko-dead" target="_blank">
+      Michiko Dead
+      </a>
+    </div>
+
     
   </body>
 </html>
