Removed head text, changed block and text colors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    My link in bio
     <style>
       body {
         padding-top: 40px;
@@ -14,7 +13,7 @@
     <div class="banner">
       <img src="/Photos/Booth Headshot.jpg" alt="Tina Cho headshot" class="banner-image">
     </div>
-
+    
     <style>
       .banner-image {
         width: 128px;
@@ -29,6 +28,29 @@
         border-radius: 48px;
         object-fit: cover;
       }
+
+      body {
+      background-color: #fef6e4;
+      }
+
+      .name {
+        color: #001858;
+      }
+
+      .social-icons a {
+        color: #001858;
+        text-decoration: none;
+      }
+
+      .link {
+        background-color: #f582ae;
+      }
+
+      .link a {
+        color: #001858;
+        text-decoration: none;
+      }
+
     </style>
     
     <div class="name">
