Fixed social icons underline issue

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       Tina Cho
     </div>
 
-    <div class="social icons">
+    <div class="social-icons">
       <a href="https://www.linkedin.com/in/haeyeontinacho/" target="_blank">
         LinkedIn
       </a>
