--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
 
       .link {
         background-color: #f582ae;
+        display: flex;
+        align-items: center;
       }
 
       .link a {
         color: #001858;
         text-decoration: none;
+        text-align: center;
+        flex-grow: 1;
       }
 
       .items {
@@ -53,6 +57,10 @@
         flex-direction: column;
         gap: 30px;
         max-width: 400px;
+      }
+
+      * {
+        border: thin red solid;
       }
 
     </style>
