Centered icons and banner

--- a/index.html
+++ b/index.html
@@ -32,8 +32,20 @@
 
       .name {
         color: #001858;
+        display: flex;
+        justify-content: center;
       }
 
+      .banner {
+        display: flex;
+        justify-content: center;
+      }
+
+      .social-icons {
+        display: flex;
+        justify-content: space-around;
+      }
+      
       .social-icons a {
         color: #001858;
         text-decoration: none;
