--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       }
 
       body {
-      background-color: #fef6e4;
+        background-color: #fef6e4;
+        display: flex;
+        justify-content: center;
       }
 
       .name {
@@ -45,7 +47,7 @@
         display: flex;
         justify-content: space-around;
       }
-      
+
       .social-icons a {
         color: #001858;
         text-decoration: none;
@@ -69,6 +71,7 @@
         flex-direction: column;
         gap: 30px;
         max-width: 400px;
+        flex-grow: 1;
       }
 
       * {
