--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         background-color: #fef6e4;
         display: flex;
         justify-content: center;
+        font-family: Georgia, 'Times New Roman', Times, serif;
       }
 
       .name {
         color: #001858;
         display: flex;
         justify-content: center;
+        font-size: x-large;
       }
 
       .banner {
@@ -57,6 +59,7 @@
         background-color: #f582ae;
         display: flex;
         align-items: center;
+        padding: 10px;
       }
 
       .link a {
@@ -72,10 +75,6 @@
         gap: 30px;
         max-width: 400px;
         flex-grow: 1;
-      }
-
-      * {
-        border: thin red solid;
       }
 
     </style>
